# test-ai-agent

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  run_server.py  test_run.py
docs/: langgraph_design.md  langgraph_vs_deepagents.md  prd.md  skills_implementation_discussion.md
src/agent/: deepagents_demo.py  graph.py  supervisor.py
src/agent/sub_agents/: doc_processor.py  insurance_consultant.py
src/api/: server.py
src/config/: llm_config.py
src/schema/: state.py
src/skills/: customer.py  insurance.py  quotation.py  registry.py
src/tools/: mock_tools.py
src/utils/: model_factory.py
